--- a/Frontend/js/class-9/index.html
+++ b/Frontend/js/class-9/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class 7</title>
+    <title>Class 9</title>
 </head>
-
 <body>
-    <h1>OBJECT</h1>
+    <h1>Class 9</h1>
+    <script src="script.js"></script>
 </body>
-<script src="./script.js"></script>
-
 </html>
