--- a/Frontend/js/DOM/class-2/index.html
+++ b/Frontend/js/DOM/class-2/index.html
@@ -23,6 +23,12 @@
     <p data-Name="Jagmohan">Paragraph 3 custom attributes </p>
 
     <p data-Name="mohan">Paragraph 3 custom attributes </p>
+
+    <div class="div1">
+        <p>this is para of html</p>
+    </div>
+    <h1>heloooooooo</h1>
+
 </body>
 
 </html>
