--- a/Frontend/js/DOM/class-2/index.html
+++ b/Frontend/js/DOM/class-2/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Dom in js</h1>
+    <!-- <h1>Dom in js</h1>
     <p>This is a paragraph 1</p>
     <p>This is a paragraph 1</p>
 
@@ -22,7 +22,7 @@
     </div>
     <p data-Name="Jagmohan">Paragraph 3 custom attributes </p>
 
-    <p data-Name="mohan">Paragraph 3 custom attributes </p>
+    <p data-Name="mohan">Paragraph 3 custom attributes </p> -->
 
     <div class="div1">
         <p>this is para of html</p>
