--- a/Frontend/js/DOM/class-2/index.html
+++ b/Frontend/js/DOM/class-2/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -24,11 +24,17 @@
 
     <p data-Name="mohan">Paragraph 3 custom attributes </p> -->
 
-    <div class="div1">
-        <p>this is para of html</p>
-    </div>
-    <h1>heloooooooo</h1>
+    <!-- <div>
+        <p>This is a <b>Bold tag</b> and paragraph tag</p>
+    </div> -->
+    <!-- <div id="one">
+        <p>this is the top level P</p>
+    </div> -->
 
+    <!-- <div class="tree">MUJHE CLICK KARO</div> -->
+    <div class="four">
+        <button>Add element</button>
+    </div>
 </body>
 
 </html>
