--- a/Frontend/js/DOM/Form/index.html
+++ b/Frontend/js/DOM/Form/index.html
@@ -2,69 +2,32 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Form to Card</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <div class="box">
-        <h1>Form</h1>
-        <div class="container">
-            <form id="form">
-                <div class="f1">
-                    <label for="fname">First Name:</label>
-                    <input type="text" id="fname" name="fname" placeholder="Enter first name">
-                </div>
 
-                <div class="f1">
-                    <label for="lname">Last Name:</label>
-                    <input type="text" id="lname" name="lname" placeholder="Enter last name">
-                </div>
+    <div id="container">
+        <h2>Form</h2>
+        <form id="form">
+            <input type="text" id="fname" placeholder="Enter first Name" required /><br /><br />
+            <input type="text" id="lname" placeholder="Enter last Name" required /><br /><br />
+            <input type="email" id="email" placeholder="Enter Email" required /><br /><br />
+            <input type="text" id="course" placeholder="Enter Course" required /><br /><br />
+            <button type="submit" id="submit">Submit</button>
+        </form>
+    </div>
 
-                <div class="f2">
-                    <label for="gender">Gender:</label>
-                    <div class="c">
-                        <div class="c1"><input type="checkbox" name="gender">
-                            <label for="">Male</label>
-                        </div>
-                        <div class="c1"><input type="checkbox" name="gender">
-                            <label for="">Female</label>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="f1">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" placeholder="Enter email">
-                </div>
-
-                <div class="f2">
-                    <label for="skills">Skills:</label>
-                    <div class="c">
-                        <div class="c1"><input type="checkbox" name="skills">
-                            <label for="">HTML</label>
-                        </div>
-                        <div class="c1"><input type="checkbox" name="skills">
-                            <label for="">CSS</label>
-                        </div>
-                        <div class="c1"><input type="checkbox" name="skills">
-                            <label for="">JS</label>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="f1">
-                    <label for="age">Age:</label>
-                    <input type="text" id="age" name="age" placeholder="Enter age">
-                </div>
-
-                <input class="submit" type="submit" value="Submit">
-            </form>
-        </div>
-        <div id="display">
-            <h1>Output</h1>
+    <div id="card" style="display: none;">
+        <div class="card">
+            <div><span>First Name:</span> <span id="cardFirstName"></span></div>
+            <div><span>Last Name:</span> <span id="cardLastName"></span></div>
+            <div><span>Email:</span> <span id="cardEmail"></span></div>
+            <div><span>Course:</span> <span id="cardCourse"></span></div>
+            <button onclick="showform()">Default</button>
         </div>
     </div>
     <script src="script.js"></script>
