--- a/Frontend/js/DOM/Clock/index.html
+++ b/Frontend/js/DOM/Clock/index.html
@@ -16,6 +16,20 @@
             <div class="hand" id="second"></div>
             <div class="center"></div>
         </div>
+        <div class="numbers">
+            <div class="number" id="one">1</div>
+            <div class="number" id="two">2</div>
+            <div class="number" id="three">3</div>
+            <div class="number" id="four">4</div>
+            <div class="number" id="five">5</div>
+            <div class="number" id="six">6</div>
+            <div class="number" id="seven">7</div>
+            <div class="number" id="eight">8</div>
+            <div class="number" id="nine">9</div>
+            <div class="number" id="ten">10</div>
+            <div class="number" id="eleven">11</div>
+            <div class="number" id="twelve">12</div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
